[package]
name = "xm5-thing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
freya = "0.3.0-rc.1"
winit = "*"
dioxus = { version = "0.5", features = [
    "macro",
    "hooks",
], default-features = false }
windows = { version = "0.59.0", features = [
    "Foundation_Collections",
    "Devices",
    "Devices_Enumeration",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
    "Storage_Streams",
    "Foundation_Diagnostics"
] }
anyhow = "1.0.96"
chrono = "0.4.39"
futures = "0.3.31"
num_enum = "0.7.5"
serde = "1.0.228"
ratatui = "0.29.0"
crossterm = "0.29.0"
